# tax_tracker

./: .gitignore  Examples.ipynb  LICENSE.md  README.md  VisualTrace.ipynb  pyproject.toml
docs/: index.html  search.js  tax_tracker.html
tax_tracker/: __init__.py  tax_tracker.py
tests/: DistributionData.csv  PriceData.csv  __init__.py  conftest.py  test_cap_gains.py  test_distributions.py  test_pnl.py
