[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TaxTracker"
version = "0.1.3"
description = "A Python module for tracking and calculating the tax treatment of trades and distributions."
readme = "README.md"
license-files = ["LICENSE.md"]
authors = [
    {name = "David Bookstaber", email = "david@bookstaber.com"}
]
requires-python = ">=3.10"
dependencies = [
    "pandas >=2.0.0"
]

[tool.setuptools]
packages = ["tax_tracker"]
